--- a/use/client/index.html
+++ b/use/client/index.html
@@ -5,12 +5,9 @@
 </head>
 <body data-ng-app="lime.client">
 
+<a href="#wumpus">What's the Wumpus</a>
 
-<h1>What's the Wumpus</h1>
-
-<div data-ng-controller="lime.client.wumpus.container">
-    {{name}}
-</div>
+<div data-ng-view></div>
 
 </body>
 </html>
