angular is assumed
checked by jshint
not checked by use-browserify

--- a/use/client/index.html
+++ b/use/client/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="index.css">
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../bower_components/angular/angular.min.js"></script>
+    <script src="../../bower_components/angular-route/angular-route.min.js"></script>
 
     <!-- index.js is build with browserify -->
     <script src="./index.js"></script>
