--- a/use/client/index.html
+++ b/use/client/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vender/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
-    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../../bower_components/angular/angular.min.js"></script>
-    <script src="../../bower_components/angular-route/angular-route.min.js"></script>
+    <script src="/vender/jquery/dist/jquery.min.js"></script>
+    <script src="/vender/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/vender/angular/angular.min.js"></script>
+    <script src="/vender/angular-route/angular-route.min.js"></script>
 
     <!-- index.js is build with browserify -->
     <script src="./index.js"></script>
